# OpenMonitor

./: LICENSE  README.md  main.py
app/: router.py
app/api/: generate_ico.py  ip_address.py
py/: .env  .gitignore  README.md  build.py  main.py  manager.sh  pyproject.toml  requirements.txt
py/app/: config.py  db.py  logger.py  result.py  router.py
py/app/api/: cpu_info.py  sysinfo.py  sysinfo_cpu.py  sysinfo_dist.py  sysinfo_log.py  sysinfo_memory.py  sysinfo_network.py  sysinfo_send_email.py  sysinfo_temperature.py
py/app/tests/: test1.py
vue-app/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
vue-app/src/: App.vue  main.ts
vue-app/src/api/: MonitorApi.ts
vue-app/src/assets/styles/: comm.scss  default.scss  element.scss
vue-app/src/components/: ZCard.vue
vue-app/src/config/: index.ts
vue-app/src/interface/: IOptions.ts  ISysInfo.ts  ISysInfoDisk.ts  ISysInfoIOStatistics.ts  ISysInfoTemperatures.ts
vue-app/src/router/: index.ts
vue-app/src/store/: index.ts
vue-app/src/store/models/: useHome.ts  useTest.ts
vue-app/src/utils/: BusinessUtil.ts  Constant.ts  Log.ts  StoreUtil.ts  index.ts  logger.ts  request.ts
vue-app/src/views/home/: index.vue
vue-app/src/views/home/components/: HomeLayout.vue  PageLayout.vue  Settings.vue  SysInfoMonitor.vue
vue-app/src/views/home/components/Settings/: Alarm.vue  Host.vue  Settings.vue
vue-app/src/views/home/components/SysInfo/: SysInfoAverageLoad.vue  SysInfoCPU.vue  SysInfoDisk.vue  SysInfoFlow.vue  (+6 more)
vue-app/src/views/test/: index.vue
