[project]
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pingparsing>=1.4.2",
  "psutil>=6.1.1",
  "pymongo>=4.10.1",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.34.0",
]
description = "服务器指标监控"
name = "server-monitoring"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

[dependency-groups]
dev = [
  "pyinstaller>=6.11.1",
  "pytest>=8.3.4",
  "ruff>=0.9.0",
]
